// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`End to End tests create issue 1`] = `
"{
  \\"contact\\": \\"test@test.org\\",
  \\"what_happened\\": \\"something\\",
  \\"version\\": \\"1.0.2 (default)\\",
  \\"browsers\\": \\"\\",
  \\"relevant_log_output\\": \\"\\",
  \\"i_agree\\": true,
  \\"foo\\": false
}"
`;

exports[`End to End tests create issue text only 1`] = `
"{
  \\"contact\\": \\"test@test.org\\",
  \\"what_happened\\": \\"something\\",
  \\"version\\": \\"\\",
  \\"browsers\\": \\"\\",
  \\"relevant_log_output\\": \\"\\",
  \\"i_agree\\": false,
  \\"foo\\": false
}"
`;
